[metadata]
# replace with your username:
name = log-helper-bit3
version = 0.0.1
author = Mauricio Montoya Medrano
author_email = mcubico33@gmail.com
description = Es un paquete que brinda la posibilidad a las clases de almacenar los pasos que se siguen en esta.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitcubico/LogHelperPy
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.8